<resources>
	<string name="app_name">Industrial Tool</string>
	<string name="app_description">The eve online industrialist tool for dummies.</string>
	<string name="volumeUnit">m³</string>
	<string name="isk">&lt;sup>&lt;small>ISK&lt;/small>&lt;/sup></string>
	<string name="item_info_activity_name">Items</string>
	<string name="item_list_buy">Buy</string>
	<string name="item_list_sell">Sell</string>
	<string name="item_list_own">Own</string>
	<string name="invalid_price">Invalid price</string>
	<string name="own_price">Your own price for the item</string>
	<string name="item_list_produce">Produce</string>
	<string name="profit">Profit</string>
	<string name="production">Production</string>
	<string name="trade">Trade</string>
	<string name="both">Both</string>
	<string name="manufacture_section_label">MANUFACTURING</string>
	<string name="manufacturing">Manufacturing</string>
	<string name="usedPrice">Used price</string>
	<string name="usedPriceDescription">The price that will be used for the calculation of the item that require this one.</string>
	<string name="prices_prompt">Choose a price</string>
	<string name="item_buy_desc">Acquired through buy orders</string>
	<string name="item_sell_desc">Acquired through sell orders</string>
	<string name="item_prod_desc">Produced</string>
	<string-array name="prices_array">
		<item>Sell</item>
		
		<item>Buy</item>
		
		<item>Produce</item>
		
	</string-array>
	<string name="blueprint_info_pattern">Produce %1$d unit(s) in %2$s</string>
	<string name="blueprint_info_tech2_pattern">M.E. %1$d  •  T.E. %2$d  •  %3$d run(s)\nProduce %4$d unit(s) in %5$s</string>
	<string name="blueprint_info_tech2_pattern2">M.E. %1$d\nT.E. %2$d\n%3$d run(s)\nProduce %4$d unit(s)</string>
	<string name="blueprint_desc">ME %1$d • TE %2$d • %3$d run(s)</string>
	<string name="unitPerBatchStr1">Produce</string>
	<string name="unitPerBatchStr2">unit(s)</string>
	<string name="ml">M.E.</string>
	<string name="pl">P.E.</string>
	<string name="billOfMaterial">Bill of materials</string>
	<string name="search_label">Items</string>
	<string name="search_hint">Search an item</string>
	<string name="search_instructions">Item name</string>
	<string name="settings_description">Items</string>
	<string name="extramaterials">Extra materials</string>
	<string name="damageperjob">damage/job</string>
	<string name="stock">Assets</string>
	<string name="stockActivityTitle">Assets in Production station</string>
	<string name="updatingOutposts">Updating outpost list…</string>
	<string name="updateOutposts">Update outpost list</string>
	<string name="refresh_stock">Refresh assets</string>
	<string name="quantity">Quantity</string>
	<string name="itemlisttitle">Favorite Items</string>
	<string name="itemlist_empty_message">To add a new item to this list, first search it and click the star icon in the item info screen.</string>
	<string name="manufacture">Manufacture</string>
	<string name="runs">Runs</string>
	<string name="run">run(s)</string>
	<string name="time">Time</string>
	<string name="production_needs">PRODUCTION NEEDS</string>
	<string name="cost">Cost</string>
	<string name="invention">Invention</string>
	<string name="required_skills_upper">REQUIRED SKILLS</string>
	<string name="required_skills">Required skills</string>
	<string name="initiator">Initiator</string>
	<string-array name="skill_level_array">
		<item>Unknown</item>
		
		<item>I</item>
		
		<item>II</item>
		
		<item>III</item>
		
		<item>IV</item>
		
		<item>V</item>
		
	</string-array>
	<string name="invention_chances">Invention chances</string>
	<string name="blueprint_spec">Blueprint spec.</string>
	<string name="required_items_upper">REQUIRED ITEMS</string>
	<string name="required_items">Required items</string>
	<string name="blueprint_copy_str1"> runs blueprint copy of </string>
	<string name="meta_level">Metalevel</string>
	<string name="meta_level_description">The meta level of the named item.</string>
	<string name="decryptorCheck">Use decryptor</string>
	<string name="decryptor">Decryptor</string>
	<string name="decryptor_prompt">Choose a decryptor</string>
	<string name="no_decryptor">No decryptor</string>
	<string name="decryptor_desc">ME %1$+d • TE %2$+d • Max run %3$+d • Probability x%4$.1f</string>
	<string name="relic_desc">Base probability %1$.1f • %2$d Runs</string>
	<string name="times">Times</string>
	<string name="parameters">Settings</string>
	<string name="api_key">Manage Api key</string>
	<string name="api_key_help">Place the key in /eoit/api_key.txt, the file must contain keyID:vCode</string>
	<string name="api_key_userid">keyID</string>
	<string name="api_key_key">vCode</string>
	<string name="api_key_create_key_desc">Use the button below to create a new key with the core feeds required to use this application.</string>
	<string name="api_key_create_key">Create key</string>
	<string name="api_key_install_key_desc">After the creation of the key click on the button below to install the new api key in this application. Click on the Install link and the api key values will be saved in the application.</string>
	<string name="api_key_install_key">Install key</string>
	<string name="api_key_manual_install_key_desc">If for any reason you the api key cannot be installed you could enter manually the values using the button below.</string>
	<string name="api_key_manual_install_key">Manual entry</string>
	<string name="api_key_saver_activity_title">Save the key</string>
	<string name="api_parsing_error">Error while reading API result.</string>
	<string name="service_unavalailable_error">Service unavailable, please try again later.</string>
	<string name="api_download_error">Error while accessing API.</string>
	<string name="api_timeout_error">API connection timeout. Try again later.</string>
	<string name="api_no_character">No character found.</string>
	<string name="api_no_character_selected">You need to select a character in the settings.</string>
	<string name="api_wrong_type">You must provide a Character type Key.</string>
	<string name="ec_parsing_error">Error while reading Eve Central result.</string>
	<string name="ec_download_error">Error while acquiring prices. Please try again later.</string>
	<string name="ec_timeout_error">Connection timeout. Please try again later.</string>
	<string name="ec_network_error">Network error. Please try again later.</string>
	<string name="no_internet_error">No internet connection !</string>
	<string name="character">Character</string>
	<string name="choose_character">Choose a character</string>
	<string name="no_character_found">No character found.</string>
	<string name="parameters_not_set">Parameters not set. \nUse Menu > Parameters</string>
	<string name="apikey_file_error">Error while reading the file /eoit/api_key.txt</string>
	<string name="apikey_file_format_error">The api key file is not well formated.</string>
	<string name="parameters_saved">Parameters saved.</string>
	<string name="skills">Skills</string>
	<string name="refresh_skills">Refresh Skills</string>
	<string name="stations">Stations</string>
	<string name="location_management">Location management</string>
	<string name="location_management_description">Choose the production and trade stations.</string>
	<string name="station_add_remove">Add/Remove</string>
	<string name="station_current_favorite_title">CURRENT FAVORITE</string>
	<string name="station_main_hubs_title">MAIN HUBS</string>
	<string name="station_assets_title">FROM YOUR ASSETS</string>
	<string name="station_role_title">Station Role</string>
	<string name="stations_help_message">Type the name of the region/solar system/station and click on the values listed. Inputs are case sensitive.</string>
	<string name="trade_station">Trade station</string>
	<string name="trade_station_description">In this station you will buy and sell your goods.</string>
	<string name="prod_station">Production station</string>
	<string name="prod_station_description">In this station you will produce items and store your asset.</string>
	<string name="both_station">Prod. and trade station</string>
	<string name="no_trade_station">No trade station is selected.</string>
	<string name="no_prod_station">No production station is selected.</string>
	<string name="choose_region">Select a region</string>
	<string name="choose_solar_system">Select a solar system</string>
	<string name="choose_station">Select a station</string>
	<string name="stations_error">Invalid station name</string>
	<string name="stations_error_desc">Enter a valid station name</string>
	<string name="region">Region</string>
	<string name="solar_system">Solar system</string>
	<string name="station">Station</string>
	<string name="choose_btn">Choose</string>
	<string name="standing">Standing</string>
	<string name="retreiving_standing">Retreiving corp. standing…</string>
	<string name="retreiving_station_infos">Retreiving station infos</string>
	<string name="saving_station_infos">Saving station infos</string>
	<string name="retreiving_station_prices">Retreiving prices in favorite stations</string>
	<string name="mining">Mining</string>
	<string name="activate_mining_description">Activate mining to see in the production plan the asteroids you need to mine.</string>
	<string name="mining_regions">Where do you mine ?</string>
	<string name="mining_regions_description">Choose the territory where you plan to mine.</string>
	<string-array name="mining_regions_array">
		<item>Amarr space</item>
		<item>Caldari space</item>
		<item>Gallente space</item>
		<item>Minmatar space</item>
	</string-array>
	<string-array name="mining_regions_values_array">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string-array name="mining_regions_sec_array">
		<item>1.0</item>
		<item>0.9</item>
		<item>0.8</item>
		<item>0.7</item>
		<item>0.6</item>
		<item>0.5</item>
		<item>0.4</item>
		<item>0.3</item>
		<item>0.2</item>
		<item>0.1</item>
		<item>0.0</item>
	</string-array>
	<string name="mining_regions_sec">Security status</string>
	<string name="mining_regions_sec_description">Select the security status of the system where you plan to mine.</string>
	<string name="icon_render_size">Icon and render sizes</string>
	<string name="icon_size">Icon sizes</string>
	<string name="render_size">Render sizes</string>
	<string-array name="icon_size_values_array">
		<item>64x64</item>
		<item>32x32</item>
	</string-array>
	<string-array name="icon_size_entry_values_array">
		<item>64</item>
		<item>32</item>
	</string-array>
	<string name="itemIcon">Item icon</string>
	<string name="unknown">Unknown</string>
	<string name="help">Help</string>
	<string name="help_menu_options">Menu options</string>
	<string name="help_favorite1">This screen show you the items that you have set as favorite with the star icon in the item info screen.</string>
	<string name="help_favorite2">let you access your production station asset.</string>
	<string name="help_favorite3">to change the parameters.</string>
	<string name="help_favorite4">search items. You can type a part of the name or the category of the item here. \n (ex: trit, frig, …)</string>
	<string name="mining_session_option">Start a mining session</string>
	<string name="feedback_option">Send feedback</string>
	<string name="dump_database">Dump database</string>
	<string name="clear_cache">Clear the image cache</string>
	<string name="ore_map_option">Ore distribution</string>
	<string name="amarr_space">Amarr space</string>
	<string name="caldari_space">Caldari space</string>
	<string name="gallente_space">Gallente space</string>
	<string name="minmatar_space">Minmatar space</string>
	<string name="language">Language</string>
	<string name="language_preference_title"><![CDATA[Items &amp; categories language (beta)]]></string>
	<string name="about">About</string>
	<string name="version">Version</string>
</resources>