<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2012 Picon software
	
	This program is free software; you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation; either version 2 of the License, or
	(at your option) any later version.
	
	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
	GNU General Public License for more details.
	
	You should have received a copy of the GNU General Public License along
	with this program; if not, write to the Free Software Foundation, Inc.,
	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-->
<menu
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/API_KEY_OPTION"
		android:icon="@drawable/ic_action_api_key"
		android:title="@string/api_key"
		app:showAsAction="always" />
	<item
		android:id="@+id/REFRESH_SKILLS_OPTION"
		android:icon="@drawable/ic_menu_refresh"
		android:title="@string/refresh_skills"
		app:showAsAction="never" />
	<item
		android:id="@+id/clear_cache_option"
		android:icon="@drawable/ic_menu_refresh"
		android:title="@string/clear_cache"
		app:showAsAction="never" />
</menu>